correction bug, rectification du overflow

--- a/css/style-sm.css
+++ b/css/style-sm.css
@@ -152,6 +152,11 @@
     margin-bottom: 43px;
 }
 
+#box_overflow{
+    width : 100%;
+    overflow: hidden;
+}
+
 #carousel_box{
     height: 12.2rem;
     position: relative;
